--- a/Coffee/Views/SellerView.axaml
+++ b/Coffee/Views/SellerView.axaml
@@ -4,7 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:coffee="clr-namespace:Coffee"
         xmlns:viewModels="clr-namespace:Coffee.ViewModels"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="720" d:DesignHeight="1080"
         x:Class="Coffee.Views.SellerView"
         x:DataType="viewModels:SellerVM"
         x:CompileBindings="True"
@@ -147,7 +147,7 @@
                                                 <Image Source="/Assets/minus.png"/>
                                         </Button>
                                         <TextBlock Grid.Column="1" Grid.Row="3"
-                                                   Text="{Binding Count}"
+                                                   Text="{Binding CountDishes}"
                                                    HorizontalAlignment="Center"
                                                    VerticalAlignment="Center"
                                                    FontSize="20"/>
@@ -194,7 +194,7 @@
                 </ListBox.ItemsPanel>
                 <ListBox.ItemTemplate>
                         <DataTemplate>
-                                <Grid>
+                                <Grid Opacity="1.3">
                                         <Image Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" 
                                                Source="{Binding Photo,
                                                Converter={StaticResource BitmapAssetValueConverter}}"
@@ -205,7 +205,7 @@
                                                    HorizontalAlignment="Center"
                                                    VerticalAlignment="Center"
                                                    FontSize="18"/>
-                                        <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Count}"
+                                        <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding CountDishes}"
                                                    HorizontalAlignment="Center"
                                                    VerticalAlignment="Center"
                                                    FontSize="18"/>
