--- a/Coffee/Views/CheckView.axaml
+++ b/Coffee/Views/CheckView.axaml
@@ -57,7 +57,7 @@
                                                 <DataGridTextColumn IsReadOnly="True" Header="Название" FontSize="25"
                                                                     Binding="{ReflectionBinding Name}"/>
                                                 <DataGridTextColumn IsReadOnly="True" Header="Кол-во" FontSize="25"
-                                                                    Binding="{ReflectionBinding Count}"/>
+                                                                    Binding="{ReflectionBinding CountDishes}"/>
                                                 <DataGridTextColumn IsReadOnly="True" Header="Цена" FontSize="25"
                                                                     Binding="{ReflectionBinding Price}"/>
                                         </DataGrid.Columns>
