--- a/Coffee/Views/MenuPageView.axaml
+++ b/Coffee/Views/MenuPageView.axaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Coffee.Views.MenuPageView"
              x:DataType="vm:MenuPageViewModel"
-             x:Name="ThisWindow">
+             x:Name="ThisPage">
     
     <Design.DataContext>
         <vm:MenuPageViewModel/>
@@ -23,10 +23,11 @@
                  CornerRadius="15" Margin="5" Padding="5"
                  Grid.Row="0" Grid.RowSpan="2" Grid.Column="0"
                  Background="Transparent"
-                 VerticalAlignment="Top">
+                 VerticalAlignment="Stretch"
+                 HorizontalAlignment="Stretch">
                 <ListBox.ItemsPanel>
                         <ItemsPanelTemplate>
-                                <WrapPanel MaxHeight="200" Orientation="Horizontal"/>
+                                <WrapPanel MaxHeight="250" Orientation="Horizontal"/>
                         </ItemsPanelTemplate>
                 </ListBox.ItemsPanel>
                 <ListBox.ItemTemplate>
@@ -38,14 +39,23 @@
                                                Height="130" Width="180"
                                                VerticalAlignment="Center" HorizontalAlignment="Center"
                                                Margin="5"/>
+                                        
                                         <TextBlock Grid.Row="1" Text="{Binding Name}"
                                                    HorizontalAlignment="Center"
                                                    VerticalAlignment="Center"
-                                                   FontSize="18"/>
+                                                   FontSize="18"
+                                                   Margin="5"/>
+                                        
+                                        <TextBlock Grid.Row="2" Text="{Binding Price}"
+                                                   HorizontalAlignment="Center"
+                                                   VerticalAlignment="Center"
+                                                   FontSize="16"
+                                                   Margin="5"/>
                                         
                                         <Grid.RowDefinitions>
                                                 <RowDefinition Height="Auto"/>
-                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="Auto"></RowDefinition>
                                         </Grid.RowDefinitions>
                                 </Grid>
                         </DataTemplate>
@@ -58,8 +68,8 @@
                        FontSize="32">Добавить блюдо</TextBlock>
         </Border>
         <StackPanel Grid.Row="1" Grid.Column="1">
-            <TextBox Watermark="Название" Margin="5"/>
-            <TextBox Watermark="Цена" Margin="5"/>
+            <TextBox Watermark="Название" Margin="5" Text="{Binding Name}"/>
+            <TextBox Watermark="Цена" Margin="5" Text="{Binding Price}"/>
             <DataGrid Name="CategoryGrid" 
                       ItemsSource="{Binding Category}"
                       Margin="5">
@@ -71,11 +81,13 @@
                 </DataGrid>
             <Grid>
                 <TextBox Grid.Column="0" Grid.ColumnSpan="2" Watermark="Путь до картинки" Margin="5"
-                         HorizontalAlignment="Stretch"/>
+                         HorizontalAlignment="Stretch" 
+                         Text="{Binding SelectedImagePath}"/>
                 <Button Grid.Column="1" HorizontalAlignment="Right" MaxHeight="32" 
                         Background="Transparent" BorderBrush="Black"
                         Margin="5" CornerRadius="3"
-                        Command="{Binding SelectImge}">
+                        Command="{Binding SelectImge}"
+                        CommandParameter="{Binding $parent[Window]}">
                     <Image Source="/Assets/folder.png"></Image>
                 </Button>
                 <Grid.ColumnDefinitions>
